# Mini_intepretator

./: CMakeLists.txt  build.sh  grammar.ini  main.c
ast_parser/: ast.c  ast.h  ast_error.c  ast_parser.c  ast_parser.h  ast_parser_api.c  ast_rule_tools.c  ast_rules.c  grammar.ini
ast_parser/lexical_analyze/: token.h  token_buffer.c  token_buffer.h  tokenizer.c  tokenizer.h  tokenizer_api.c  tokenizer_api.h  tokenizer_error.c
include/: ast_parser_api.h  ast_types.h  data_arena.h  parser_errors.h  system_tools.h  tokenizer_api.h
include/internal/: ast_literals.h  ast_statements.h
lexical_analyse/: token_buffer.c  tokenizer.c  tokenizer.h  tokenizer_error.c
lexical_analyse.c/: tokenizer.c  tokenizer.h  tokenizer_error.c
lexical_analyze/: token_buffer.h  tokenizer.c  tokenizer_error.c
src/: CMakeLists.txt
src/ast_parser/: CMakeLists.txt  ast_error.c  ast_parser.c  ast_parser.h  ast_parser_api.c  ast_rule_tools.c  ast_rules.c  ast_rules.h  parser.c  parser.h  parser_errors.c
src/ast_parser/ast/: ast.c  ast.h  ast_api.c  ast_api.h  ast_rules.c  ast_tools.c  literals.c
src/ast_parser/lexer/: token.h  token_buffer.c  token_buffer.h  tokenizer.c  tokenizer_api.c  tokenizer_api.h
src/include/: ast_parser_api.h  ast_types.h  data_arena.h  syntax_errors.h  system_tools.h
src/include/internal/: ast_expressions.h  ast_literals.h  ast_operations.h  ast_statements.h
src/system_tools/: CMakeLists.txt  files.c  tools.c
src/utils/: CMakeLists.txt  data_arena.c  syntax_errors.c
syntax_analyze/: ast_parser_api.c
system_tools/: files.c  tools.c
tests/: CMakeLists.txt
tests/lexer_tests/: CMakeLists.txt  Makefile  TODO.txt  buffer_tests.c  program.c  tests.h  tokens_read_tests.c
tests/lexer_tests/lexer_test_files/: token_test2.txt  token_test3.txt  token_test6.txt
tests/lexical_analyse_tests/: Makefile  tests.c  tests.h  tests_run.c  tokens_read_tests.c
tests/lexical_analyse_tests/test_files/: test1.txt  test2.txt  test5.txt  token_test4.txt
utils/: data_arena.c  parser_errors.c
